--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 ### IntelliJ IDEA ###
+.idea/
+.gitignore
+DataStructures.iml
 out/
-!**/src/main/**/out/
+!**/src/main/out/
 !**/src/test/**/out/
 
 ### Eclipse ###
